# kungsbacka_openuniverse

./: .gitignore  Cargo.toml  Pipfile  anteckningar.txt  load_offers.py
src/: json_portal.rs  main.rs  parse.rs
