[package]
name = "kungsbacka_openuniverse"
version = "0.1.0"
authors = ["Lukas Sandström <luksan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
attohttpc = "0.15.*"
clap = "2.*"
lazy_static = "~1.4.0"
markup5ever = "0.7.*" # This version must match what soup pulls in, see cargo tree
regex = "1"
serde = "~1.0.114"
serde_derive = "~1.0.104"
serde_json = "1.0"
soup = "0.5.*"
tabular = "0.1.4"
thiserror = "~1.0.20"