[package]
name = "kungsbacka_openuniverse"
version = "0.1.0"
authors = ["Lukas Sandström <luksan@gmail.com>"]
edition = "2021"
description = "Ladda ner erbjudanden från Openuniverse och jämför priser."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
attohttpc = "0.19.1"
clap = { version = "3", features = ["derive"] }
lazy_static = "~1.4.0"
regex = "1"
serde = "~1.0.114"
serde_derive = "~1.0.104"
serde_json = "1.0"
tabular = "0.2.0"
thiserror = "~1.0.20"
